fixed shifting animation

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ a {
     background-color: #172fb8;
     width: 0%;
     bottom: 4px;
-    right: 14px;
+    right: 6px;
     transition: all 300ms ease;
 }
 
